test.yaml
apiVersion: v1
kind : PersistentVolumeClaim
metadata:
  name: postgres-pvc
spec:
  storageClassName: ""
  volumeName: postgres-pv
  accessModes:
    - ReadWriteOnce
  # DB가 요청할 볼륨의 리소스
  resources:
    requests:
      storage: 10G
---
kind: Deployment
apiVersion: apps/v1
metadata: 
 name: spring-demo-db
 labels: 
  app: spring-demo-application
spec: 
 replicas: 1
 selector: 
  matchLabels: 
   app: spring-demo-db
 template: 
  metadata: 
   creationTimestamp: null
   labels: 
    app: spring-demo-db
  spec: 
   containers: 
    - name: spring-demo-db
      image: postgres:10.4
      ports: 
      - name: spring-demo-db
        containerPort: 5432
        protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      imagePullPolicy: IfNotPresent
   volumes: 
    - name: "postgres-storage"
      persistentVolumeClaim:
       claimName: postgres-pvc
   restartPolicy: Always
